--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 supabase==2.3.4
-httpx==0.26.0
+httpx==httpx==0.25.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
 redis==5.0.1
