--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 pydantic==2.5.3
@@ -12,3 +11,4 @@ python-dotenv==1.0.0
 python-json-logger==2.0.7
 redis==5.0.1
 hiredis==2.3.2
+itsdangerous==2.1.2   ← obligatoire
