--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,4 +11,4 @@ python-dotenv==1.0.0
 python-json-logger==2.0.7
 redis==5.0.1
 hiredis==2.3.2
-itsdangerous==2.1.2   ← obligatoire
+itsdangerous==2.1.2
