--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,39 +8,37 @@ jobs:
   sanity:
     runs-on: ubuntu-latest
 
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+      SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+
     steps:
-      # 1️⃣ Checkout
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Python
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
-      # 3️⃣ Install backend dependencies
       - name: Install backend dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
 
-      # 4️⃣ Backend import test
       - name: Backend import check
         run: python -c "import backend.main; print('Backend OK')"
 
-      # 5️⃣ Node
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
 
-      # 6️⃣ Frontend install
       - name: Frontend install
         working-directory: frontend
         run: npm install
 
-      # 7️⃣ Frontend build
       - name: Frontend build
         working-directory: frontend
         run: npm run build
